force-app/main/default/objects/Client_FollowUp__c/Client_FollowUp__c.object-meta.xml
<CustomObject>
    <description>This Object is to capture the Business Outcome response against various objects like Interaction, Online Registration and Project of Event Type.</description>
    <label>Business Outcome Survey</label>
    <nameField>
        <displayFormat>BAS-{0000}</displayFormat>
        <label>Business Outcome Survey Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Business Outcome Surveys</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>