force-app/main/default/objects/Client_FollowUp__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Business Outcome Surveys</relationshipLabel>
    <relationshipName>Account_Client_Follow_Ups</relationshipName>
    <type>Lookup</type>
</CustomField>