force-app/main/default/objects/Client_FollowUp__c/fields/Account_Formula__c.field-meta.xml
<CustomField>
    <fullName>Account_Formula__c</fullName>
    <formula>Contact__r.AccountId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Formula</label>
    <type>Text</type>
</CustomField>