force-app/main/default/objects/Client_FollowUp__c/fields/Additional_Assistance_Required__c.field-meta.xml
<CustomField>
    <fullName>Additional_Assistance_Required__c</fullName>
    <label>Additional Assistance Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>