force-app/main/default/objects/Client_FollowUp__c/fields/Amount_of_Business_Investment__c.field-meta.xml
<CustomField>
    <fullName>Amount_of_Business_Investment__c</fullName>
    <label>Amount of Business Investment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>