force-app/main/default/objects/Client_FollowUp__c/fields/Engagement_Type__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Type__c</fullName>
    <label>Engagement Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Business Start Up Event</fullName>
            </value>
            <value>
                <fullName>Online Registration</fullName>
            </value>
            <value>
                <fullName>Consultation Interaction</fullName>
            </value>
            <value>
                <fullName>Company Intelligence Interaction</fullName>
            </value>
            <value>
                <fullName>Business Expansion Event</fullName>
            </value>
            <value>
                <fullName>Online Training</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>