force-app/main/default/objects/Client_FollowUp__c/fields/Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Event_Type__c</fullName>
    <label>Event Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Business Start Up</fullName>
            </value>
            <value>
                <fullName>Business Expansion</fullName>
            </value>
            <value>
                <fullName>Export Development</fullName>
            </value>
            <value>
                <fullName>Mission</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>