force-app/main/default/objects/Client_FollowUp__c/fields/Event_Type_Formula__c.field-meta.xml
<CustomField>
    <fullName>Event_Type_Formula__c</fullName>
    <formula>TEXT(Event__r.Program_Sub_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Event Type</label>
    <type>Text</type>
</CustomField>