force-app/main/default/objects/Client_FollowUp__c/fields/Export_Experience__c.field-meta.xml
<CustomField>
    <fullName>Export_Experience__c</fullName>
    <label>Export Experience</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New-to-Export</fullName>
            </value>
            <value>
                <fullName>Market Expansion</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>