force-app/main/default/objects/Client_FollowUp__c/fields/Hire_more_in_6_Months__c.field-meta.xml
<CustomField>
    <fullName>Hire_more_in_6_Months__c</fullName>
    <label>Hire more in 6 Months</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>