force-app/main/default/objects/Client_FollowUp__c/fields/Increased_Financing__c.field-meta.xml
<CustomField>
    <fullName>Increased_Financing__c</fullName>
    <inlineHelpText>Have you accessed additional financing since you engaged Enterprise Toronto?</inlineHelpText>
    <label>Increased Financing</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>