force-app/main/default/objects/Client_FollowUp__c/fields/Initial_Survey_Stage__c.field-meta.xml
<CustomField>
    <fullName>Initial_Survey_Stage__c</fullName>
    <description>This field is to track the various stages of Business Outcome surveys including reminder sent in interval of 30. 60 90  days or 6 Months.</description>
    <inlineHelpText>This field is to track the various stages of Business Outcome surveys including reminder sent in interval of 30. 60 90  days or 6 Months.</inlineHelpText>
    <label>Initial Survey Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>In Queue - 30 Days</fullName>
            </value>
            <value>
                <fullName>In Queue - 60 Days</fullName>
            </value>
            <value>
                <fullName>In Queue - 90 Days</fullName>
            </value>
            <value>
                <fullName>Sent - 90 Days</fullName>
            </value>
            <value>
                <fullName>Responded</fullName>
            </value>
            <value>
                <fullName>Unresponsive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>