force-app/main/default/objects/Client_FollowUp__c/fields/Interaction__c.field-meta.xml
<CustomField>
    <fullName>Interaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Interaction</label>
    <referenceTo>Interaction__c</referenceTo>
    <relationshipName>Interaction_Follow_Ups</relationshipName>
    <type>Lookup</type>
</CustomField>