force-app/main/default/objects/Client_FollowUp__c/fields/Interaction_Type__c.field-meta.xml
<CustomField>
    <fullName>Interaction_Type__c</fullName>
    <formula>Interaction__r.RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Interaction Type</label>
    <type>Text</type>
</CustomField>