force-app/main/default/objects/Client_FollowUp__c/fields/Moved_to_Larger_Location__c.field-meta.xml
<CustomField>
    <fullName>Moved_to_Larger_Location__c</fullName>
    <inlineHelpText>Have you moved to a larger location since you engaged Enterprise Toronto?</inlineHelpText>
    <label>Moved to Larger Location</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>