force-app/main/default/objects/Client_FollowUp__c/fields/New_Export_Market__c.field-meta.xml
<CustomField>
    <fullName>New_Export_Market__c</fullName>
    <label>New Export Market</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>