force-app/main/default/objects/Client_FollowUp__c/fields/Number_of_International_Deals__c.field-meta.xml
<CustomField>
    <fullName>Number_of_International_Deals__c</fullName>
    <label>Number of International Deals</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>