force-app/main/default/objects/Client_FollowUp__c/fields/Online_Registration__c.field-meta.xml
<CustomField>
    <fullName>Online_Registration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Online Registration</label>
    <referenceTo>Online_Registration__c</referenceTo>
    <relationshipName>Online_Registration_Client_Follow_Ups</relationshipName>
    <type>Lookup</type>
</CustomField>