force-app/main/default/objects/Client_FollowUp__c/fields/Plan_to_Start_Business__c.field-meta.xml
<CustomField>
    <fullName>Plan_to_Start_Business__c</fullName>
    <label>Plan to Start Business</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>