force-app/main/default/objects/Client_FollowUp__c/fields/Plan_to_Start_In_Next_Year__c.field-meta.xml
<CustomField>
    <fullName>Plan_to_Start_In_Next_Year__c</fullName>
    <description>Dependencies (based in Form Assembly survey form):
Yes – Q10
No – end survey</description>
    <label>Plan to Start In Next Year</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>