force-app/main/default/objects/Client_FollowUp__c/fields/Service_Rating__c.field-meta.xml
<CustomField>
    <fullName>Service_Rating__c</fullName>
    <label>Service Rating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Highly Effective</fullName>
            </value>
            <value>
                <fullName>Good</fullName>
            </value>
            <value>
                <fullName>Fair</fullName>
            </value>
            <value>
                <fullName>Poor</fullName>
            </value>
            <value>
                <fullName>Ineffective</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>