force-app/main/default/objects/Client_FollowUp__c/fields/Staff_Respectful__c.field-meta.xml
<CustomField>
    <fullName>Staff_Respectful__c</fullName>
    <label>Staff Respectful</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Strongly Agree</fullName>
            </value>
            <value>
                <fullName>Agree</fullName>
            </value>
            <value>
                <fullName>Neither</fullName>
            </value>
            <value>
                <fullName>Disagree</fullName>
            </value>
            <value>
                <fullName>Strongly Disagree</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>