force-app/main/default/objects/Client_FollowUp__c/fields/Staff_To_Be_Hired_in_6_Months__c.field-meta.xml
<CustomField>
    <fullName>Staff_To_Be_Hired_in_6_Months__c</fullName>
    <label>Staff To Be Hired in 6 Months</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>