force-app/main/default/objects/Client_FollowUp__c/fields/Start_After_Toronto_Support__c.field-meta.xml
<CustomField>
    <fullName>Start_After_Toronto_Support__c</fullName>
    <label>Start After Toronto Support</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>