force-app/main/default/objects/Client_FollowUp__c/fields/Survey_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Survey_Start_Date__c</fullName>
    <description>This field will be used as base date to trigger all email alert through workflow.</description>
    <inlineHelpText>This field will be used as base date to trigger all email alert through workflow.</inlineHelpText>
    <label>Survey Start Date</label>
    <type>Date</type>
</CustomField>