force-app/main/default/objects/Client_FollowUp__c/fields/Workflow_Session__c.field-meta.xml
<CustomField>
    <fullName>Workflow_Session__c</fullName>
    <label>Workflow Session</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Consultation Interaction</fullName>
            </value>
            <value>
                <fullName>Business Start Up Event</fullName>
            </value>
            <value>
                <fullName>Online Registration</fullName>
            </value>
            <value>
                <fullName>Company Intelligence Interaction</fullName>
            </value>
            <value>
                <fullName>Business Expansion Event</fullName>
            </value>
            <value>
                <fullName>Online Training</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>