force-app/main/default/objects/Client_FollowUp__c/fields/X1_Year_Survey_Stage__c.field-meta.xml
<CustomField>
    <fullName>X1_Year_Survey_Stage__c</fullName>
    <label>1 Year Survey Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Queue</fullName>
            </value>
            <value>
                <fullName>Sent</fullName>
            </value>
            <value>
                <fullName>Responded</fullName>
            </value>
            <value>
                <fullName>Unresponsive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>